#1 OdooExperience Day1 Chapter 5

--- a/estate/view/estate_property_views.xml
+++ b/estate/view/estate_property_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <odoo>
     <record id="test_model_action" model="ir.actions.act_window">
         <field name="name">Test action</field>
