--- a/estate/view/estate_property_views.xml
+++ b/estate/view/estate_property_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="test_model_action" model="ir.actions.act_window">
         <field name="name">Test action</field>
-        <field name="test.model">test_model</field>
+        <field name="res_model">test.model</field>
         <field name="view_mode">list,form</field>
     </record>
 </odoo>
