--- a/estate/view/estate_property_views.xml
+++ b/estate/view/estate_property_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-    <record id="test_model_action" model="ir.actions.act_window">
+    <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Test action</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">list,form</field>
