--- a/estate/view/estate_menus.xml
+++ b/estate/view/estate_menus.xml
@@ -4,5 +4,5 @@
         <menuitem id="estate_advertisement_menu" name="Advertisement">
             <menuitem id="estate_property_menu_action" name="Properties" action="estate_property_action"/>
         </menuitem>
-    </mmenuitem>
+    </menuitem>
 </odoo>
