--- a/estate/view/estate_menus.xml
+++ b/estate/view/estate_menus.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-    <menuitem id="estate_menu_action" name="Real Estate" />
+    <menuitem id="estate_menu_action" name="Real Estate">
         <menuitem id="estate_advertisement_menu" name="Advertisement">
             <menuitem id="estate_property_menu_action" name="Properties" action="estate_property_action"/>
         </menuitem>
