--- a/estate/view/estate_property_views.xml
+++ b/estate/view/estate_property_views.xml
@@ -4,5 +4,9 @@
         <field name="name">Test action</field>
         <field name="res_model">test.model</field>
         <field name="view_mode">list,form</field>
+        <list string="Test List">
+            <field name="name"/>
+            <field name="last_seen"/>
+        </list> 
     </record>
 </odoo>
