#1 OdooExperience Day1 Chapter 6

--- a/estate/view/estate_form.xml
+++ b/estate/view/estate_form.xml
@@ -1,6 +1,6 @@
 <odoo>
     <record id="estate_form" model="ir.ui.view">
-        <field name="name">Test form</field>
+        <field name="name">test.model.form</field>
         <field name="res_model">test.model</field>
         <field name="arch" type="xml">
             <form string="Property">
