--- a/estate/view/estate_list.xml
+++ b/estate/view/estate_list.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="estate_list" model="ir.ui.view">
         <field name="name">test.model.list</field>
-        <field name="res_model">test.model</field>
+        <field name="model">test.model</field>
         <field name="arch" type="xml">
             <list string="Test List">
                 <field name="name"/>
