--- a/estate/view/estate_form.xml
+++ b/estate/view/estate_form.xml
@@ -35,7 +35,7 @@
                         <page string="Other Info">
                             <group>
                                 <group>
-                                    <field name="seller_id"/>
+                                    <field name="salesperson_id"/>
                                     <field name="buyer_id"/>
                                 </group>
                             </group>
