--- a/estate/view/estate_form.xml
+++ b/estate/view/estate_form.xml
@@ -37,6 +37,9 @@
                                 <group>
                                     <field name="salesperson_id"/>
                                     <field name="buyer_id"/>
+                                    <field name="tag_ids"/>
+                                    <field name="property_type_id"/>
+                                    <field name="offer_ids"/>
                                 </group>
                             </group>
                         </page>
