--- a/estate/view/estate_property_offer_views.xml
+++ b/estate/view/estate_property_offer_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="estate_property_offer_list" model="ir.ui.view">
         <field name="name">estate.property.offer.list</field>
-        <field name="res_model">estate.property.offer</field>
+        <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
             <list string="Offers">
                 <field name="price"/>
