--- a/estate/view/estate_form.xml
+++ b/estate/view/estate_form.xml
@@ -9,9 +9,11 @@
                         <h1>
                             <field name="name" class="mb16"/>
                         </h1>
+                        <field name="property_tag_ids" widget="many2many_tags" options="{'no_create': True}" class="oe_edit_only"/>
                     </div>
                     <group>
                         <group>
+                            <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
