--- a/estate/view/estate_form.xml
+++ b/estate/view/estate_form.xml
@@ -19,6 +19,7 @@
                         </group>
                         <group>
                             <field name="expected_price"/>
+                            <field name="best_price"/>
                             <field name="selling_price"/>
                         </group>
                     </group>
@@ -29,8 +30,13 @@
                                 <group>
                                     <field name="description"/>
                                     <field name="bedrooms"/>
+                                    <field name="living_area"/>
+                                    <field name="facades"/>
+                                    <field name="garage"/>
                                     <field name="garden"/>
+                                    <field name="garden_area"/>
                                     <field name="garden_orientation"/>
+                                    <field name="total_area"/>
                                 </group>
                             </group>
                         </page>
