--- a/estate/view/estate_property_offer_views.xml
+++ b/estate/view/estate_property_offer_views.xml
@@ -7,7 +7,9 @@
             <list string="Offers">
                 <field name="price"/>
                 <field name="partner_id"/>
-                <field name="status"/>
+                <field name="status"/>+
+                <field name="date_deadline"/>
+                <field name="validity"/>
             </list> 
         </field>
     </record>
