--- a/estate/view/estate_form.xml
+++ b/estate/view/estate_form.xml
@@ -4,6 +4,10 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form string="Property">
+                <header>
+                    <button name="action_sold_property" type="object" string="SOLD"/>
+                    <button name="action_cancel_property" type="object" string="CANCEL"/>
+                </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -13,6 +17,7 @@
                     </div>
                     <group>
                         <group>
+                            <field name='state'/>
                             <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
