--- a/estate/view/estate_property_offer_views.xml
+++ b/estate/view/estate_property_offer_views.xml
@@ -9,8 +9,8 @@
                 <field name="partner_id"/>
                 <field name="validity"/>
                 <field name="date_deadline"/>
-                <button name="action_accept_offer" type="object" string="ACCEPT"/>
-                <button name="action_refuse_offer" type="object" string="REFUSE"/>
+                <button name="action_accept_offer" type="object" string="ACCEPT" icon="fa-check"/>
+                <button name="action_refuse_offer" type="object" string="REFUSE" icon="fa-times"/>
                 <field name="status"/>
             </list> 
         </field>
