--- a/estate/view/estate_property_type_views.xml
+++ b/estate/view/estate_property_type_views.xml
@@ -4,11 +4,11 @@
         <field name="name">Property Type</field>
         <field name="res_model">estate.property.type</field>
         <field name="view_mode">list,form</field>
-        <field name="line_ids">
+        <!-- <field name="line_ids">
             <list>
                 <field name="field_1"/>
                 <field name="field_2"/>
             </list>
-        </field>
+        </field> -->
     </record>
 </odoo>
