--- a/estate/view/estate_property_type_inline_views.xml
+++ b/estate/view/estate_property_type_inline_views.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0"?>
 <odoo>
-    <record id="estate_property_type_inline_action" model="ir.actions.act_window">
-        <field name="name">Property Type Inline</field>
-        <field name="res_model">estate.property.type.inline</field>
-        <field name="view_mode">list,form</field>
+    <record id="estate_property_type_inline_list" model="ir.ui.view">
+        <field name="name">estate.property.type.inline.list</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <list string="Properties">
+                <field name="name"/>
+                <field name="expected_price"/>
+                <field name="state"/>
+            </list> 
+        </field>
     </record>
 </odoo>
